--- a/package.json
+++ b/package.json
@@ -17,15 +17,14 @@
     "url": "https://github.com/TA2k/ioBroker.hoover"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^3.2.2",
-    "aws-iot-device-sdk": "^2.2.15",
-    "axios": "^1.7.7",
-    "http-cookie-agent": "^6.0.6",
-    "json-bigint": "^1.0.0",
-    "json2iob": "^2.6.12",
-    "qs": "^6.13.0",
-    "tough-cookie": "^5.0.0"
-  },
+  "cheerio": "^1.0.0-rc.12",
+  "axios": "^1.4.0",
+  "aws-iot-device-sdk": "^2.2.0",
+  "json2iob": "^1.0.0",
+  "qs": "^6.11.0",
+  "tough-cookie": "^4.1.2",
+  "http-cookie-agent": "^0.4.0"
+},
   "devDependencies": {
     "@alcalzone/release-script": "^3.8.0",
     "@alcalzone/release-script-plugin-iobroker": "^3.7.2",
